# rcache-client-c

./: CMakeLists.txt  README.md  main.c
include/rcache/: rcache-zmq.h  rcache.h
rcache-zmq-c/: CMakeLists.txt  rcache-zmq.c
